--- a/game.html
+++ b/game.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Alchemist's Number Scroll Advanced vs. Bot</title>
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/8068/8068091.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
